overflow corrected

--- a/src/styles/utils.css
+++ b/src/styles/utils.css
@@ -1,6 +1,8 @@
 body {
     overflow-x: hidden;
-    overflow-y: hidden;
+}
+body::-webkit-scrollbar {
+    display: none;
 }
 
 .explorer {
